Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Optimized the validate() method of the CPSAttachedFileWidget
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-